--- a/03_ex.html
+++ b/03_ex.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body bgcolor = "pink" text = "blue">
-		<h1 align = "center">亮亮的个人简历</h1>
+		<h1 align = "center">亮亮的亮亮亮亮亮</h1>
 		<!--水平线  -->
 		<hr size = "5px" width = "50%" align = left color = red>
 
